--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -144,14 +144,14 @@
 
 \begin{frame}{low\_priority\_wait\_mutex}
     \begin{columns}
-        \begin{column}{0.6\linewidth}
+        \begin{column}{0.6\textwidth}
             \begin{itemize}
                 \item スレッドは, wait\_set にアクセスする前に, mutually exclusiveロック \al{low\_priority\_wait\_mutex} を保持する必要がある
                 \item すなわち wait\_set にアクセスして変更できるのは, 一度に 1 つのスレッドだけ
                 \item それ以外の場合, スレッドはブロックされ, ロックがリリースされるのを待つ
             \end{itemize}
         \end{column}
-        \begin{column}{0.4\linewidth}
+        \begin{column}{0.4\textwidth}
             \fullimage{figure/workflow1.png}
         \end{column}
     \end{columns}
