--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -5,33 +5,33 @@
 
 \begin{frame}{ROS (Robot Operating System)}
     \begin{itemize}
-        \item ROS (Robot Operating System) は, ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つであり, 急速に開発が進んでいる
-        \item ROS の主な哲学は, ソフトウェアのモジュール性と構成可能性を促進することにより, ロボットソフトウェア開発の生産性を促進することである
-        \item ただし, ROS にはリアルタイム機能がないという大きな欠点もあり, 安全性が重要な環境での実装が制限される
+        \item ROS (Robot Operating System) は, ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つ
+        \item ROS の主な哲学は, ソフトウェアのモジュール性と構成可能性を促進することにより, ロボットソフトウェア開発の生産性を向上させること
+        \item ただし, ROS にはリアルタイム機能がなく, 安全性が重要な環境での実装が制限される
 
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ROS 2}
     \begin{itemize}
-        \item ROS 2 は 2017 年にリリースされた第 2 世代の ROS であり, ROS から最も肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供することを目的としている
+        \item ROS 2 は 2017 年にリリースされた第 2 世代の ROS であり, ROS から肯定的な側面を継承し, リアルタイムロボットソフトウェアをサポートする強力なリアルタイム機能を提供する
         \item 例えば, ROS 2 は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとして DDS (Data Distribution Service) を採用し, リアルタイムオペレーティングシステム上に展開できる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ハードリアルタイム制約}
     \begin{itemize}
-        \item ROS 2 の新しいアーキテクチャは優れたプラットフォームを提供するが, それだけではハードリアルタイムロボットソフトウェアをサポートするには不十分である
-        \item セーフクリティカルドメインのロボットソフトウェアはハードリアルタイム制約があるため, 設計者はそのタイミング動作を正式にモデル化および分析して, リアルタイム制約を実行時に常に保証する必要がある
+        \item セーフクリティカルドメインのロボットソフトウェアはハードリアルタイム制約がある
+        \item 設計者はタイミング動作を正確にモデル化して分析を行い, リアルタイム制約を実行時に常に保証する必要がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{エグゼキュータ}
     \begin{itemize}
 
-        \item ROS 2 のリアルタイムパフォーマンスに関連するコアコンポーネントはエグゼキュータである
-        \item エグゼキュータは, プラットフォームとなる OS のスレッドでワークロードの実行を調整する
-        \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要である
+        \item ROS 2 のリアルタイムパフォーマンスに関連するコアコンポーネントはエグゼキュータ
+        \item エグゼキュータはプラットフォームとなる OS のスレッドでワークロードの実行を調整する
+        \item ROS 2 executor のスケジューリング動作は, 過去のリアルタイムスケジューリングの研究で研究されたものとはまったく異なり, 新しい分析手法が必要
 
     \end{itemize}
 \end{frame}
@@ -39,18 +39,15 @@
 \begin{frame}{シングル/マルチスレッドエグゼキュータ}
     \begin{itemize}
         \item ROS 2 には, ワークロードをシーケンシャルに実行するシングルスレッドエグゼキュータと, ワークロードの実行を複数のスレッドに分散するマルチスレッドエグゼキュータの 2 つの組み込みエグゼキュータがある
-
-        \item 最近のいくつかの研究で, シングルスレッドエグゼキュータのリアルタイムパフォーマンスのモデリングと分析が研究されている
-
-        \item これらの研究により, シングルスレッドエグゼキュータに展開されたシステムのリアルタイムパフォーマンスを保証することが可能になったが, マルチスレッドエグゼキュータのモデル化と分析の問題は未解決のままである
+        \item 最近の研究で, シングルスレッドエグゼキュータのリアルタイムパフォーマンスのモデリングと分析が行われたが, マルチスレッドエグゼキュータは未だ研究されていない
+        \item マルチコアプロセッサのコンピューティング能力を十分に活用するには, マルチスレッドエグゼキュータが必要
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{本論文の貢献}
     \begin{itemize}
-        \item 最新のロボットアプリケーションはますます複雑になっているため, マルチコアプロセッサのコンピューティング能力を十分に活用するには, マルチスレッドエグゼキュータにアプリケーションを実装することが必要である
-        \item 本論文では, ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に関する最初の作業を行う
-        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, それらの応答時間分析手法を開発する
-        \item さらに, さまざまなエグゼキュータのスケジューリング動作による応答時間への影響を調査し, 設計で複数のシングルスレッドエグゼキュータから 1 つのマルチスレッドエグゼキュータにワークロードをマージするときに応答時間が長くなるリスクを特定する
+        \item ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に関する最初の作業を行う
+        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして実装されたシステムのスケジューリングモデルを提示し, その応答時間分析手法を開発する
+        \item エグゼキュータのスケジューリング動作による応答時間への影響を調査し, 複数のシングルスレッドエグゼキュータから 1 つのマルチスレッドエグゼキュータにワークロードをマージするときに応答時間が長くなるリスクを特定する
     \end{itemize}
 \end{frame}
