--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -10,37 +10,50 @@
 
 \begin{frame}{ROS 2}
     \fitimage{
-        ROS 2 は, オペレーティングシステム (OS) 上の複数の抽象化レイヤの統合実装
+        \al{ROS 2} は OS 上の複数の抽象化レイヤの統合実装
     }{figure/ros2_system.png}
 \end{frame}
 
-\begin{frame}{publish/subscribe model}
+\begin{frame}{Publish/Subscribeパラダイム}
+    ROS 2 アプリケーションは, \al{publish/subscribeパラダイム}を使用して相互に通信する複数のノードで構成される
+
+    \begin{block}{Publish/Subscribeパラダイム}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item ノードはトピックにメッセージをpublishし, そのトピックをsubscribeしているノードにメッセージをブロードキャストする
+            \item ノードはコールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
+            \item コールバックはメッセージ自体をpublishすることも可能で, 複雑な動作をトピックとコールバックのネットワークとして実装できる
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{エグゼキュータ}
     \begin{itemize}
-        \item ROS 2 アプリケーションは通常, publish/subscribe パラダイムを使用して相互に通信する個々のノードで構成される
-        \item ノードはトピックにメッセージをpublishし, トピックにsubscribeしているノードにメッセージをブロードキャストする
-        \item ノードは, コールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
-        \item コールバックはメッセージ自体をpublishする場合があるため, 複雑な動作をトピックとコールバックのネットワークとして実装できる
-        \item ROS 2 アプリケーションを展開するには, 個々のノードがホストに分散され, プラットフォームとなる OS のプロセスにマップされる
+        \item ROS 2 アプリケーションがプラットフォームに展開される際には, 個々のノードが OS のプロセスにマップされる
+        \item ROS 2 クライアントライブラリの\al{エグゼキュータ}は, OS プロセス内のノードのコールバックの実行を調整する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Executor}
+\begin{frame}{シングル/マルチスレッドエグゼキュータ}
     \begin{itemize}
-        \item ROS 2 クライアントライブラリのエグゼキュータは, OS プロセス内のノードのコールバックの実行を調整する
-        \item ROS 2 には 以下の 2 つの組み込みエグゼキュータが用意されている
-              \begin{itemize}
-                  \item 1 つのスレッドでコールバックを実行するシングルスレッドエグゼキュータ
-                  \item コールバックの処理を複数のスレッドに分散するマルチスレッドエグゼキュータ
-              \end{itemize}
-        \item この論文では, マルチスレッドエグゼキュータ上で実行される処理チェーンとして実装されるアプリケーションに焦点を当てる
+        \item ROS 2 には以下 \tu{2 つの組み込みエグゼキュータがある}
+              \begin{block}{シングルスレッドエグゼキュータ}
+                  1 つのスレッドでコールバックを実行するエグゼキュータ
+              \end{block}
+              \begin{block}{マルチスレッドエグゼキュータ}
+                  コールバックの処理を複数のスレッドに分散するエグゼキュータ
+              \end{block}
+              \vspace{5mm}
+
+        \item \textbf{\underline{本論文ではマルチスレッドエグゼキュータに焦点を当てる}}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{[補足] DDS}
-    ノードのpublisherとsubscriberの間のメッセージ交換は，抽象DDS (Data Distribution Service) 層によって実現される
+\begin{frame}{DDS (Data Distribution Service)}
+    ノードのpublisherとsubscriberの間のメッセージ交換は，抽象\al{DDS} (Data Distribution Service) 層によって実現される
 
     \begin{block}{抽象DDS}
-        DDS とクライアントライブラリ間の通信インターフェース
+        DDS とクライアントライブラリ間の通信インタフェース
     \end{block}
     \begin{block}{DDS}
         publisherとsubscriber間でメッセージを交換するための業界標準の分散通信システム
@@ -50,38 +63,39 @@
 \begin{frame}{処理チェーン}
     \fitimage{
         \begin{itemize}
-            \item チェーンの各頂点は, コールバックを表す
-            \item 処理チェーンは, 特定のイベント (通常は, システムタイマによってアクティベーションされる時間イベント) によってトリガされ, 複数のエグゼキュータにまたがる
+            \item \al{処理チェーン}は特定のイベントによってトリガされ, 複数のエグゼキュータにまたがる
+            \item チェーンの各頂点はコールバックを表す
         \end{itemize}
     }{figure/multi_threaded_executor.png}
 \end{frame}
 
 \begin{frame}{本論文の分析の焦点}
-    \full{
-        \assume{
-            \begin{itemize}
-                \item 本論文では単一のエグゼキュータのチェーンにバインドされた応答時間を計算することに注意を限定する
-                \item ただし，各エグゼキュータに対して導出された応答時間の境界を追加することにより, チェーンが複数のエグゼキュータにまたがる場合に拡張できる
-            \end{itemize}
-        }
-    }
+    \fitimage{
+        \tu{本論文では単一のエグゼキュータにおけるチェーンの応答時間に焦点を当てる}
+        \notes{CPAアプローチ*によってチェーンが複数のエグゼキュータにまたがる場合に拡張できる}
+    }{figure/multi_threaded_executor.png}
+
+    \source{*D.Casini et al., “Response time analysis of ROS 2 processing chains under reservation-based scheduling,” in ECRTS, 2019.}
 \end{frame}
 
 \begin{frame}{コールバックグループ}
-    \begin{itemize}
-        \item エグゼキュータ内のコールバックは, 異なるコールバックグループに属す可能性がある
-        \item コールバックグループには, mutually exclusive と reentrant の 2 種類がある（詳細は後述）
-    \end{itemize}
+    \fitimage{
+        \begin{itemize}
+            \item コールバックは必ず1つの\al{コールバックグループ}に属す
+            \item エグゼキュータ内のコールバックは, 異なるコールバックグループに属す可能性がある
+        \end{itemize}
+    }{figure/multi_threaded_executor.png}
+
 \end{frame}
 
 \begin{frame}{ノード}
     \begin{itemize}
-        \item コールバックは, 異なるノードに属す場合もある
-        \item ROS 2 では, どのコールバックグループにも指定されていない同じノード内のコールバックは, 既定で同じmutually exclusive コールバックグループ内にあると見なされる
-        \item これを除いて, ノードの概念は, 本論文で研究されている分析問題とは無関係である
+        \item コールバックは異なる\al{ノード}に属す場合もある
+        \item ROS 2 では, 同じノード内のコールバックはデフォルトで同じコールバックグループとなる
+        \item これを除いて, ノードの概念は本論文とは無関係
     \end{itemize}
 
-    \assume{簡単にするために, 抽象モデルにノードレベルの情報を含めない}
+    \assume{簡単にするために, モデルにノードレベルの情報を含めない}
 \end{frame}
 
 
@@ -90,30 +104,27 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 以下では, ROS 2 のマルチスレッドエグゼキュータでのスケジューリング動作を紹介する
-        \item 本論文の内容は, ROS 2 Foxy Fitzroy に基づいている
+        \item ROS 2 マルチスレッドエグゼキュータのスケジューリング動作を紹介する
+        \item \tu{本論文の内容は ROS 2 Foxy Fitzroy に基づいている}
     \end{itemize}
 
 \end{frame}
 
 \begin{frame}{コールバック}
     \begin{itemize}
-        \item コールバックは, 設計者が処理する ROS 2 の最小限のスケジューリングエンティティである
+        \item \al{コールバック}は ROS 2 の最小のスケジューリングエンティティ
         \item マルチスレッドエグゼキュータでは, スレッドは抽象 DDS レイヤからメッセージを受け取り, 対応するコールバックを実行する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{コールバックの優先順位決定方法}
-    ROS 2 では, コールバックの優先度は 2 つのレベルで決定される
+    ROS 2 では, \tu{コールバックの優先度は 2 つのレベルで決定される}
 
     \begin{block}{コールバックタイプ}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
-            \item コールバックはタイマー, サブスクライバ, サービス, クライアントの 4 つのタイプに分類される
-            \item 4 つのコールバックタイプの優先順位は, タイマー $\succ$ サブスクライバ $\succ$ サービス $\succ$ クライアント
-                  \begin{itemize}
-                      \item $\succ$: より高い優先度を持つ
-                  \end{itemize}
+            \item コールバックはタイマ・サブスクライバ・サービス・クライアントの 4 つのタイプに分類される
+            \item 優先順位は, タイマ $\succ$ サブスクライバ $\succ$ サービス $\succ$ クライアント \notes{$\succ$: より高い優先度を持つ}
         \end{itemize}
     \end{block}
 
@@ -122,96 +133,95 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \assume{簡単にするために, この論文の残りの部分にはコールバックタイプに関する情報は含めない}
-\end{frame}
-
-
-\begin{frame}{Multi-threaded Executorにおけるスレッドのワークフロー}
-    \begin{columns}
-        \begin{column}{0.55\textwidth}
-            \full{
-                \begin{block}{wait\_set}
-                    エグゼキュータ内のすべてのスレッドは, 共通のセット wait\_set によって, 利用可能なメッセージを持つコールバックを記録する
-                \end{block}
-            }
-        \end{column}
-        \begin{column}{0.45\textwidth}
-            \fullimage{figure/thread_workflow.png}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{low\_priority\_wait\_mutex}
-    \begin{columns}
-        \begin{column}{0.6\textwidth}
-            \begin{itemize}
-                \item スレッドは, wait\_set にアクセスする前に, mutually exclusiveロック \al{low\_priority\_wait\_mutex} を保持する必要がある
-                \item すなわち wait\_set にアクセスして変更できるのは, 一度に 1 つのスレッドだけ
-                \item それ以外の場合, スレッドはブロックされ, ロックがリリースされるのを待つ
-            \end{itemize}
-        \end{column}
-        \begin{column}{0.4\textwidth}
-            \fullimage{figure/workflow1.png}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{reentrantとmutually exclusiveの違い}
-    \begin{itemize}
-        \item reentrant コールバックグループに属すwait\_set内のコールバックはいつでも選択できる
-        \item 対照的に, mutually exclusive各コールバックグループにはフラグ \al{can\_be\_taken\_from} があり, そのグループに属すコールバックを選択して実行できるかどうかを示す
-        \item グループのコールバックが実行のために選択されると, フラグは false に設定され, コールバックの終了後に true に設定される
-        \item mutually exclusive コールバックグループに属すコールバックは,  can\_be\_taken\_from が true の場合にのみ選択できる
-        \item それ以外の場合, スレッドはこのコールバックをスキップして次のコールバックに進む
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{can\_be\_taken\_fromによるワークフロー}
-    \fullimage{figure/workflow2.png}
-\end{frame}
-
-\begin{frame}{コールバック選択後}
-    \fitimage{
-        コールバックが正常に選択されると, スレッドは low\_priority\_wait\_mutex をリリースし, wait\_set からコールバックを削除する
-    }{figure/workflow3.png}
+\begin{frame}{コールバックタイプに関する簡単化}
+    \full{
+        \assume{本論文ではコールバックタイプに関する情報は含めない}
+    }
 \end{frame}
 
 \begin{frame}{yield\_before\_execute}
     \begin{itemize}
-        \item yield\_before\_execute の構成が false に設定されている場合, スレッドは選択されたコールバックの実行をすぐに開始する
-        \item それ以外の場合, yield\_before\_execute が true に設定されている場合, スレッドは, 再度スケジュールされるまでプロセッサを OS に譲る
-        \item この作業では, 既定の構成 yield\_before\_execute $=$ false を考慮する
+        \item \al{yield\_before\_execute} が false に設定されている場合, スレッドは選択されたコールバックの実行をすぐに開始する
+        \item yield\_before\_execute が true に設定されている場合, スレッドは再度スケジュールされるまでプロセッサを OS に譲る
+        \item \tu{本論文ではデフォルトの設定である yield\_before\_execute $=$ false とする}
     \end{itemize}
+\end{frame}
 
+\begin{frame}{メッセージキュー}
+    ROS 2 では, 各コールバックに到着したメッセージをバッファリングするためのキューがあり, その深さはユーザによって指定される
     \assume{
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
+            \item キューが十分に大きく, メッセージが上書きされない
             \item コールバックは最も早く到着したメッセージでノンプリエンプティブに実行される
-                  \begin{itemize}
-                      \item ROS 2 では, 各コールバックには到着したメッセージをバッファリングするためのキューがあり, その深さはユーザによって指定される
-                      \item キューが十分に大きく, メッセージが上書きされないと仮定する
-                  \end{itemize}
         \end{itemize}
     }
 \end{frame}
 
-\begin{frame}{コールバックが選択できない場合}
+\begin{frame}{wait\_set}
+    エグゼキュータ内のスレッドは共通のセット \al{wait\_set} によって, 利用可能なメッセージを持つコールバックを保持する
+\end{frame}
+
+\begin{frame}{reentrant/mutually exclusiveコールバックグループ}
+    \tu{コールバックグループには以下2つの種類がある}
+    \begin{block}{Reentrantコールバックグループ}
+        wait\_set内のコールバックはいつでも選択できる
+    \end{block}
+    \begin{block}{Mutually exclusiveコールバックグループ}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item 各グループに排他制御フラグ \al{can\_be\_taken\_from} がある
+            \item グループのコールバックが選択されるとフラグは false に設定され, コールバックの終了後に true に設定される
+            \item mutually exclusive コールバックグループに属すコールバックは,  can\_be\_taken\_from が true の場合にのみ選択できる
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{スレッドのワークフロー全体像}
+    \fullimage{figure/thread_workflow.png}
+\end{frame}
+
+\begin{frame}{[ワークフロー] low\_priority\_wait\_mutex}
     \fitimage{
         \begin{itemize}
-            \item すべてのカテゴリがチェックされ, 実行するコールバックを選択できない場合, スレッドは, wait\_set をリセットし, wait\_set を更新する
-            \item can\_be\_taken\_from が true の場合にのみ, mutually exclusive コールバックグループからのコールバックを wait\_set に追加できる
+            \item スレッドは wait\_set にアクセスする前に, 排他制御ロック \al{low\_priority\_wait\_mutex} を獲得する必要がある
+            \item すなわち wait\_set を変更できるのは一度に 1 つのスレッドのみ
+            \item それ以外の場合, スレッドはブロックされる
         \end{itemize}
-    }{figure/workflow4.png}
+    }{figure/workflow1.jpg}
 \end{frame}
 
-\begin{frame}{コールバックをwait\_setに追加できない場合}
-    \begin{itemize}
-        \item コールバックを wait\_set に追加できない場合, 頻繁なロックとロック解除によるオーバヘッドを回避するために, スレッドは, 新しいメッセージの到着によって通知されるか, 定義済みの最大ブロック時間に関してタイムアウトになるまでブロックされる
-        \item それでも実行するコールバックが見つからない場合, スレッドはロックをリリースしてアイドル状態になる
-    \end{itemize}
+\begin{frame}{[ワークフロー] mutually exclusiveコールバックグループの挙動1}
+    \fullimage{figure/workflow2.jpg}
 \end{frame}
 
-\begin{frame}{コールバックをwait\_setに追加できない場合（ワークフロー）}
-    \fullimage{figure/workflow5.png}
+\begin{frame}{[ワークフロー] コールバック選択後}
+    \fitimage{
+        コールバックが選択されると, スレッドは wait\_set からコールバックを削除し, low\_priority\_wait\_mutex をリリースする
+    }{figure/workflow4.jpg}
+\end{frame}
+
+\begin{frame}{[ワークフロー] mutually exclusiveコールバックグループの挙動2}
+    \fullimage{figure/workflow3.jpg}
+\end{frame}
+
+
+\begin{frame}{[ワークフロー] コールバックが選択できない場合}
+    \fitimage{
+        \begin{itemize}
+            \item 全てのコールバックがチェックされ, 実行するコールバックを選択できない場合, スレッドは wait\_set をリセットし, wait\_set を更新する
+            \item mutually exclusive コールバックグループのコールバックは，can\_be\_taken\_from が true の場合にのみ wait\_set に追加できる
+        \end{itemize}
+    }{figure/workflow5.jpg}
+\end{frame}
+
+\begin{frame}{[ワークフロー] コールバックを wait\_set に追加できない場合}
+    \begin{columns}
+        \begin{column}{0.4\textwidth}
+            コールバックを wait\_set に追加できない場合, スレッドは low\_priority\_wait\_mutex をリリースしてアイドル状態になる
+        \end{column}
+        \begin{column}{0.6\textwidth}
+            \fullimage{figure/workflow6.jpg}
+        \end{column}
+    \end{columns}
 \end{frame}
