--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -12,7 +12,7 @@
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
-\logo{\begin{textblock*}{0.1\linewidth}(405pt, 3.0pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
+\logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
 
 %%%%% Document Start %%%%%
@@ -27,8 +27,8 @@
     \tableofcontents[hideallsubsections]
 \end{frame}
 
-\input{introduction.tex}
-% \input{background.tex}
+% \input{introduction.tex}
+\input{background.tex}
 % \input{system_model.tex}
 % \input{responce_time_analysis.tex}
 % \input{the_second_boud.tex}
