--- a/setting.tex
+++ b/setting.tex
@@ -71,20 +71,21 @@
 \setbeamersize{text margin left=15pt, text margin right=25pt}
 % -- equation font --
 \usefonttheme{professionalfonts}
-% -- block style --
-\metroset{block=fill}
 % -- block border --
-\useinnertheme[shadow,rounded]{tcolorbox}
+\useinnertheme[shadow]{tcolorbox}
 \makeatletter
 \tcbset{
     boxrule=0pt,
     borderline={1.5pt}{0pt}{beamer@tcb@titlebg}
 }
 \makeatother
+% -- block text size --
+\setbeamerfont{block body}{size=\normalsize}
 % -- Change standard block width --
 \addtobeamertemplate{block begin}{%
     \vspace{-3mm}
-    \centering\begin{columns}\begin{column}{0.9\textwidth}\centering
+    \centering\begin{columns}\begin{column}{0.9\textwidth}
+            \centering
             }{}
             \addtobeamertemplate{block end}{}{\end{column}\end{columns}}
 % -- Change alert block width --
@@ -151,11 +152,14 @@
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
+\newcommand{\tu}[1]{\textbf{\underline{#1}}}
+\newcommand{\notes}[1]{{\footnotesize\\※#1}}
 \newcommand{\full}[1]{
     \centering
     \begin{columns}
         \begin{column}{\textwidth}
-            \begin{minipage}[t][\textheight][c]{\textwidth}
+            \hspace{-3.5mm}
+            \begin{minipage}[t][\textheight][c]{\columnwidth}
                 #1
             \end{minipage}
         \end{column}
@@ -167,7 +171,7 @@
         \begin{columns}
             \begin{column}{\textwidth}
                 \centering
-                \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \adjustbox{max width=\columnwidth, max height=\slideheight}{
                     \fbox{\includegraphics{#1}}
                 }
             \end{column}
@@ -258,3 +262,18 @@
     ]{#1}
 }
 \tcbuselibrary{theorems,skins}
+% -- source --
+\renewcommand{\footnoterule}{}
+\setbeamercolor{framesource}{fg=gray}
+\setbeamerfont{framesource}{size=\tiny}
+
+\defbeamertemplate{footnote}{unnumbered}{%
+    \usebeamercolor[fg]{framesource}%
+    \usebeamerfont{framesource}%
+    \insertfootnotetext\hfill%
+}
+
+\newcommand{\source}[1]{%
+    \setbeamertemplate{footnote}[unnumbered]%
+    \footnotetext{#1}%
+}
