--- a/template.tex
+++ b/template.tex
@@ -12,7 +12,7 @@
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
-\logo{\begin{textblock*}{0.1\linewidth}(-3pt, 236pt)\includegraphics[scale=0.5]{\beamerDir/master_figure/Emb_logopdf}\end{textblock*}}
+\logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
 
 %%%%% Document Start %%%%%
