--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -294,7 +294,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば，図5のC3のチェーンインスタンスに対して，-→M2のすべての可能な干渉配列によって引き起こされる可能性のあるQ2の上限は，表IVに示されている.
+        \item 例えば, 図5のC3のチェーンインスタンスに対して, -→M2のすべての可能な干渉配列によって引き起こされる可能性のあるQ2の上限は, 表IVに示されている.
     \end{itemize}
 \end{frame}
 
