--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -28,7 +28,7 @@
 \end{frame}
 
 % \input{introduction.tex}
-% \input{background.tex}
+\input{background.tex}
 \input{system_model.tex}
 % \input{responce_time_analysis.tex}
 % \input{the_second_boud.tex}
