--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -79,8 +79,8 @@
                     $\mathcal{I}_{k,i}^\mathcal{B}  $  & \tabml{$[r_i, s_i)$の間に, $c_i$と同じmutually exclusiveコールバックグループに属す \\$\mathcal{C}_k$のコールバックインスタンスが実行した時間の総量} \\\hline
                     $\overrightarrow{\mathcal{M}}_{k}$ & $J$に対する$\mathcal{C}_{k}$のスーパー干渉シーケンス                               \\\hline
                     $\mathcal{Q}_k$                    & lemma2                                                                             \\\hline
-                    $\Phi_{k,i}$                       & $\mathcal{Q}_k$に対する $\mathcal{S}_{k,i}$の寄与 式2                             \\\hline
-                    $ \hat{\Phi} $                     & $\Phi_{k,i}$の上界 式3,4                                                          \\\hline
+                    $\Phi_{k,i}$                       & $\mathcal{Q}_k$に対する $\mathcal{S}_{k,i}$の寄与 式2                              \\\hline
+                    $ \hat{\Phi} $                     & $\Phi_{k,i}$の上界 式3,4                                                           \\\hline
                 \end{tabular}
             }
         \end{table}
@@ -154,96 +154,151 @@
 \label{ssec: scheduling_model}
 
 
-\begin{frame}{}
+\begin{frame}{コールバックインスタンスのリリースタイミング}
     \begin{itemize}
-        \item 実行時に, $J_{i}^{k}$ 内の最初のコールバックインスタンス $c_{i, 1}^{k}$ は, $J_{i}^{k}$ がリリースされるときにリリースされる
-        \item $J_{i}^{k}$ 内の別のコールバックインスタンスは, その先行の終了時, つまり, 先行からの入力メッセージが利用可能になった時点でリリースされる
+        \item $J_{i}^{k}$ 内のソースコールバックインスタンス $c_{i, 1}^{k}$ は, $J_{i}^{k}$ のリリースと同時にリリースされる
+        \item $J_{i}^{k}$ 内の非ソースコールバックインスタンスは, その先行の終了時, すなわち, 先行からの入力メッセージが利用可能になった時にリリースされる
         \item 同じコールバックの複数のインスタンスがリリースされた場合, リリース時刻を基準にFIFOにエンキューされる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Pending}
+\begin{frame}{pending}
+    \begin{definition}[pending]
+        コールバックインスタンス$c_{i, j}$がリリースされ, 自身の $j-1$ 以前のインスタンスがすべて実行中か終了しているとき, そのインスタンスは pending である
+    \end{definition}
+\end{frame}
 
+\begin{frame}{ready, P-blocked}
+    \begin{definition}[P-blocked]
+        $c_{i, j}$ が mutually exclusive コールバックグループに属しており, $c_{i, j}$ が pending かつ, $c_{i, j}$ と同じグループ内のコールバックのインスタンス ($c_{i, j}$ 自体を含む) が実行されている場合, $c_{i, j}$ は P-blocked である
+    \end{definition}
+    \begin{definition}[ready]
+        コールバックインスタンスが pending であり, P-blockedでない場合, そのコールバックインスタンスは ready である
+    \end{definition}
+\end{frame}
 
+\begin{frame}{pendingコールバックインスタンスの状態}
+    pendingコールバックインスタンス$c_{i, j}$は, ready または P-blocked のいずれか
     \begin{itemize}
-        \item コールバックインスタンス$c_{i, j}$は, それがリリースされ, その前のインスタンスがすべて実行中か終了しているとき, \al{pending} と呼ぶ
-        \item pendingコールバックインスタンス$c_{i, j}$は, \al{ready} または\al{P-blocked} のいずれかである
+        \item  $c_{i, j}$ が mutually exclusive コールバックグループに属している場合:
               \begin{itemize}
-                  \item  $c_{i, j}$ がmutually exclusive コールバックグループに属している場合, $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンス ($c_{i, j}$ 自体を含む) が実行されていない場合, $c_{i, j}$ はreadyである
-                  \item それ以外の場合, $c_{i, j}$ は P-blockedされる
-
-                  \item  $c_{i, j}$ が再入可能コールバックグループに属している場合, pending $c_{i, j}$ は常に ready である
+                  \item $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンスが実行されていない場合, $c_{i, j}$ はready
+                  \item それ以外の場合, $c_{i, j}$ は P-blocked
+              \end{itemize}
+        \item  $c_{i, j}$ がreentrantコールバックグループに属している場合:
+              \begin{itemize}
+                  \item $c_{i, j}$ は常に ready
               \end{itemize}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{$\Omega$}
-    エグゼキュータは, 実行のために選択できるreadyコールバックインスタンスを記録するreadyセット $\Omega$ を持っている
-\end{frame}
-
-\begin{frame}{Eligible}
     \begin{itemize}
-        \item $\Omega$ 内の ready のコールバックインスタンス $c_{i, j}$ が選択されるための前提条件は, \al{eligible} であることである
-        \item mutually exclusive コールバックグループに属す $\Omega$ 内のコールバックインスタンス $c_{i, j}$ は, $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンスが実行されていない場合に eligible であり, それ以外の場合は \al{R-blocked} される
-        \item 対照的に, reentrant コールバックグループに属すコールバックインスタンスは, $\Omega$ にある場合は常に eligible である
-        \item つまり, いつでも, $\Omega$ のコールバックインスタンスは eligible であるか, R-blockedされている
-        \item つまり, mutually exclusive同じコールバックグループ内のコールバックのコールバックインスタンスは, 並列に実行されることは決してない
+        \item エグゼキュータは readyコールバックインスタンスを保持する共通のreadyセット $\Omega$ を持つ
+        \item コールバックインスタンスが実行のために選択されると, $\Omega$ から削除される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{updated, poling point}
+\begin{frame}{R-blocked, eligible}
+    $\Omega$ 内の ready のコールバックインスタンス $c_{i, j}$ が実行のために選択される条件は eligible であること
+    \begin{definition}[R-blocked]
+        $c_{i, j}$ が mutually exclusive コールバックグループに属すかつ, $\Omega$ 内に存在し, $c_{i, j}$ と同じグループ内のコールバックのインスタンスが実行されている場合, $c_{i, j}$ は R-blocked である
+    \end{definition}
+    \begin{definition}[eligible]
+        $c_{i, j}$ が $\Omega$ 内に存在し, R-blocked でない場合, eligible である
+    \end{definition}
+\end{frame}
+
+\begin{frame}{$\Omega$ 内のコールバックインスタンスの状態}
+    $\Omega$ 内のコールバックインスタンスは eligible であるか, R-blockedされている
+    \begin{itemize}
+        \item $c_{i, j}$ が mutually exclusive コールバックグループに属す場合:
+              \begin{itemize}
+                  \item $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンスが実行されていない場合, $c_{i, j}$ は eligible
+                  \item それ以外の場合, $c_{i, j}$ は R-blocked
+              \end{itemize}
+        \item $c_{i, j}$ が reentrant コールバックグループに属す場合:
+              \begin{itemize}
+                  \item $c_{i, j}$ は 常に eligible
+              \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{mutually exclusiveコールバックグループの特徴}
+    上記の設計により, 同じmutually exclusiveコールバックグループに属すコールバックのインスタンスは, 並列に実行されない
+\end{frame}
+
+
+\begin{frame}{ポーリングポイント}
     \begin{itemize}
         \item コールバックインスタンスは, ready でもすぐには $\Omega$ に追加されない
-        \item 代わりに, $\Omega$ に eligible なコールバックがなく, スレッドがアイドル状態の場合にのみ, ready のコールバックインスタンスを $\Omega$ に追加できる
-        \item $\Omega$ は, $\Omega$ に新しい要素が追加された時点で更新されると言う
-        \item さらに, $\Omega$ が更新されると, まず $\Omega$ が $\emptyset$ に設定され, その後, 現在すべての ready コールバックインスタンスが $\Omega$ に追加される
-        \item 特に, $\Omega$ が更新される時点を\al{ポーリングポイント}として定義する
-        \item 一連のコールバックインスタンスが同じポーリングポイントで $\Omega$ に追加された場合, これらのインスタンスは同じバッチにあると言う
+        \item $\Omega$ に eligible なコールバックが無く, スレッドがアイドル状態の場合にのみ, ready のコールバックインスタンスを $\Omega$ に追加できる
+              \begin{definition}[ポーリングポイント]
+                  ポーリングポイントは $\Omega$ が更新される時点である
+              \end{definition}
+              \vspace{3mm}
+        \item $\Omega$ が更新されると, まず $\Omega$ が $\emptyset$ に設定され, その後, 現在すべての ready コールバックインスタンスが $\Omega$ に追加される
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{updated, バッチ}
+    \begin{itemize}
+        \item $\Omega$ に新しい要素が追加されることを \al{updated} と呼ぶ
+        \item 複数のコールバックインスタンスが同じポーリングポイントで $\Omega$ に追加された場合, これらのインスタンスは同じ\al{バッチ}であると呼ぶ
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{スレッド}
     \begin{itemize}
         \item $\Omega$ 内のeligibleなコールバックインスタンスは, $m$ 個のスレッドによって1つずつ選択され, ノンプリエンプティブに実行される
         \item スレッドとは, 処理リソースの観点から, 対応するプロセッサを表すものである
+        \item スレッドがコールバックインスタンスが実行しているとき\al{ビジーである}と呼び, コールバックインスタンスを実行していないときは\al{アイドル状態}と呼ぶ
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{コールバックインスタンスの優先度}
     \begin{itemize}
-        \item eligibleなコールバックインスタンスを選択する順序は, それらの優先度によって異なる
-        \item 各コールバックには固定の固有の優先度があり, そのすべてのインスタンスがこの優先度を継承する
-        \item $h p\left(c_{i, j}\right)$ を使用して, コールバック $c_{i, j}$ よりも優先度の高い一連のコールバックを示す
-        \item 実行するコールバックインスタンスが選択されると, $\Omega  c_{i, j}$ から削除される
+        \item eligibleなコールバックインスタンスを選択する順序はそれらの優先度によって決定される
+        \item 各コールバックには固定の固有の優先度があり, すべてのインスタンスがこの優先度を継承する
+        \item $h p\left(c_{i, j}\right)$ を使用して, コールバック $c_{i, j}$ よりも優先度の高いコールバックのセットを示す
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item $c_{i, j}$ が P-blockedまたは R-blockedのいずれかである場合, \al{ブロックされている}と呼ぶ
-        \item $J_{i}^{k}$ のコールバックインスタンスが実行されているときにチェーンインスタンス $J_{i}^{k}$ が実行されており, $J_{i}^{k}$ のコールバックインスタンスがブロックされているときに \al{$J_{i}^{k}$ がブロックされている}と言う
-        \item スレッドは, 何らかのコールバックインスタンスが実行されているときは\al{ビジーである}と呼び, コールバックインスタンスが実行されていないときは\al{アイドル状態}と呼ぶ
-    \end{itemize}
+\begin{frame}{blocked}
+    \begin{definition}[コールバックインスタンス $c_{i, j}$ が blocked]
+        $c_{i, j}$ が P-blockedまたは R-blockedのいずれかである場合, blocked である
+    \end{definition}
+    \begin{definition}[チェーンインスタンス $J_{i}^{k}$ が blocked]
+        $J_{i}^{k}$ 内のコールバックインスタンスが blocked である場合, $J_{i}^{k}$ は blocked である
+    \end{definition}
+    \begin{definition}[チェーンインスタンス $J_{i}^{k}$ が実行中]
+        $J_{i}^{k}$内のコールバックインスタンスが実行中の場合, $J_{i}^{k}$ は実行中である
+    \end{definition}
 \end{frame}
 
-\begin{frame}{例}
+\begin{frame}{例の前提1}
     \fitimage{
         \begin{itemize}
             \item $\mathcal{C}_{1}=\left\{c_{1,1}, c_{1,2}\right\}, \mathcal{C}_{2}=\left\{c_{2,1}, c_{2,2}\right\}$ と $\mathcal{C}_{3}=\left\{c_{3,1}, c_{3,2}, c_{3,3}, c_{3,4}\right\}$ の 2 つのスレッドでスケジュールされた 3 つのチェーンがある
-            \item 特に, $c_{2,2}$ と $c_{3,2}$ はmutually exclusive同じコールバックグループに属し, 他のコールバックはreentrant コールバックグループに属す
-            \item すべてのコールバックの優先度と WCET を図 3(b) に示す
-            \item 数字が小さいほど優先度が高くなる
-
+            \item $c_{2,2}$ と $c_{3,2}$ は同じmutually exclusiveコールバックグループに属し, 他のコールバックはreentrant コールバックグループに属す
         \end{itemize}
-    }{figure/system_model_example_a_b.png}
+    }{figure/system_model_example_a.png}
 \end{frame}
 
-
-\begin{frame}{}
+\begin{frame}{例の前提2}
     \fitimage{
         \begin{itemize}
-            \item 上矢印は, チェーンインスタンスのリリース時刻を表す
-            \item 右の表は各ポーリングポイントでの $\Omega$ のコールバックインスタンスを示す
+            \item 表はすべてのコールバックの優先度と WCET を示す
+            \item 数字が小さいほど優先度が高くなる
+        \end{itemize}
+    }{figure/system_model_example_b.png}
+\end{frame}
+
+\begin{frame}{例の前提3}
+    \fitimage{
+        \begin{itemize}
+            \item 上矢印はチェーンインスタンスのリリース時刻を表す
+            \item 右の表は各ポーリングポイントでの $\Omega$ 内のコールバックインスタンスを示す
         \end{itemize}
     }{figure/system_model_example_c_d.png}
 \end{frame}
@@ -252,9 +307,6 @@
     \fullimage{figure/system_model_example_sup1.jpg}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item $c_{2,2}^{1}$ によって R-block される $c_{3,2}^{1}$ は eligible でないため,  $\Omega$ から削除される
-        \item $c_{3,2}^{1}$ が $\Omega$ から削除された後, $(2,4)$ の時間間隔中に P-blocked され, $\Omega$ に追加できない
-    \end{itemize}
+\begin{frame}{P-blocked 例}
+    \fullimage{figure/system_model_example_p_blocked.jpg}
 \end{frame}
